--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,8 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 a {
   color: inherit;
@@ -13,4 +11,48 @@ a {
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #2c4d51;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background: #ddebf3;
+}
+
+.font-ui {
+  font-family: "Catamaran", sans-serif;
+}
+
+.font-ubantu {
+  font-family: "Ubuntu", sans-serif;
+}
+
+.animated-underline {
+  border-bottom-width: 0;
+  background-image: linear-gradient(transparent, transparent),
+    linear-gradient(#fff, #fff);
+  background-size: 0 1px;
+  background-position: 0 100%;
+  background-repeat: no-repeat;
+  transition: background-size 0.5s ease-in-out;
+}
+
+.animated-underline-black {
+  background-image: linear-gradient(transparent, transparent),
+    linear-gradient(black, black);
+}
+
+.animated-underline:hover {
+  background-size: 100% 1px;
+  background-position: 0 100%;
 }
